.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:06:05 **** Incremental Build of configuration Debug for project Task23 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/MyMain.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/MyMain.d" -MT"Core/Src/MyMain.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/MyMain.o"
../Core/Src/MyMain.c:17:10: error: #include expects "FILENAME" or <FILENAME>
   17 | #include NUM_PASS_ERR 3
      |          ^~~~~~~~~~~~
../Core/Src/MyMain.c: In function 'handleCommand':
../Core/Src/MyMain.c:143:42: error: 'NUM_PASS_ERR' undeclared (first use in this function)
  143 |   if(passFromMem == param && passError < NUM_PASS_ERR){
      |                                          ^~~~~~~~~~~~
../Core/Src/MyMain.c:143:42: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:43: Core/Src/MyMain.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
21:06:58 **** Incremental Build of configuration Debug for project Task23 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/MyMain.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/MyMain.d" -MT"Core/Src/MyMain.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/MyMain.o"
arm-none-eabi-gcc -o "Task23.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\student\STM32CubeIDE\workspace_1.9.0\Task23\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Task23.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Task23.elf
 
arm-none-eabi-size   Task23.elf 
arm-none-eabi-objdump -h -S  Task23.elf  > "Task23.list"
   text	   data	    bss	    dec	    hex	filename
  34100	    120	   2064	  36284	   8dbc	Task23.elf
Finished building: default.size.stdout
 
Finished building: Task23.list
 
